kubernetes/3-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: sample
  name: sample
  labels:
    app: sample
spec:
  selector: 
    app: sample
  ports:
  - port: 80
    name: webui
