kubernetes/4-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample
  namespace: sample
spec:
  ingressClassName: nginx
  rules:
  - host: sample.localhost
    http:
      paths:
      - backend:
          service:
            name: sample
            port:
              number: 80
        path: /
        pathType: Prefix
